--- a/templates/base.html
+++ b/templates/base.html
@@ -132,8 +132,9 @@
             <a class="dropdown-item" href="/changepassword">Change Password</a>
             <a class="dropdown-item" href="/uploadforreprint_yh">Upload Reprint File</a>
             <a class="dropdown-item" href="/editcurrentquotedata">Edit Quote Data</a>
-          {% endif %}
-          <a class="dropdown-item" href="/ssPostSurveyQuestions">Post Survey Update</a>
+            {% endif %}
+            <a class="dropdown-item" href="/ssPostSurveyQuestions">Post Survey Update</a>
+            <a class="dropdown-item" href="/ssGetPhotosForUpload">Upload Photos</a>
           <!-- <a class="dropdown-item" href="/stripecheckout">Subscribe</a> -->
           {% if request.session.created_quote %}
             <div class="dropdown-divider"></div>
