--- a/templates/pdf/user_yourheatx/customer_comms/Boiler Quotation Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Boiler Quotation Comms.html
@@ -19,7 +19,7 @@
 <body>
 <div class='box'>
     <div class='box2'>
-        <p style='text-align:center'><img src='{{ image_logo }}'></p>
+        <p style='text-align:center'><img src='http://www.qpcentral.co.uk/static/images/YourHeatLogo-Transparent.png'></p>
         <p style='text-align:center; font-family:verdana; font-size:18px'><b>About your boiler quote</b></p>
     </div>
 <br><br>
