--- a/templates/pdf/user_yourheatx/customer_comms/Installation Notification Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Installation Notification Comms.html
@@ -19,7 +19,7 @@
 <body>
 <div class='box'>
     <div class='box2'>
-        <p style='text-align:center'><img src='{{ image_logo }}'></p>
+        <p style='text-align:center'><img src='http://www.qpcentral.co.uk/static/images/YourHeatLogo-Transparent.png'></p>
         <p style='text-align:center; font-family:verdana; font-size:18px'><b>About your installation...</b></p>
     </div>
 <br><br>
@@ -29,7 +29,7 @@
 <p class="all_text">
     Thank you for choosing Your Heat as your trusted boiler installation specialist. 
     Please accept this email as confirmation of your installation booking for {{installation_date|date:"D j F Y"}} with our engineer {{engineer_name}}. 
-    He will arrive with you for between 8am and 10am on this day and will be installing a {{brand}} boiler.
+    He will arrive with you between 8am and 10am on this day and will be installing a {{brand}} boiler.
 </p>
 
 <p class="all_text">
