--- a/templates/yourheat/orderforms/ssPostSurveyQuestionsForm.html
+++ b/templates/yourheat/orderforms/ssPostSurveyQuestionsForm.html
@@ -75,7 +75,7 @@
 
         <button class="btn boilerbtn btn-warning" type="submit">Update Smartsheet</button>
 
-        <a href="{% url 'boilerform_yh' %}" class="btn btn-secondary">Cancel</a>
+        <a href="{% url 'HubHome' %}" class="btn btn-secondary">Cancel</a>
 
     </form>
     <br>
