--- a/templates/yourheat/orderforms/workloadandextrasform.html
+++ b/templates/yourheat/orderforms/workloadandextrasform.html
@@ -149,7 +149,7 @@
         document.getElementsByClassName("form-extras-group")[0].style.visibility = "hidden";
     }
     
-    console.log("hello");
+    // console.log("hello");
     }
     </script>
 
