--- a/templates/yourheat/pages/photos_sent_to_smartsheet.html
+++ b/templates/yourheat/pages/photos_sent_to_smartsheet.html
@@ -4,14 +4,13 @@
 
 <div class="container">
 
-    <h4>Smartsheet Update</h4>
+    <h4>Photos sent to Smartsheet</h4>
     <a class="btn btn-secondary" href="/home/">Return to Dashboard</a>
 
 </div>
 
 <script>
-    all_good("Smartsheet processing", "The details have been updated on Smartsheet.", "HubHome/")
+    all_good("Photo processing", "The photos have been sent to Smartsheet.", "HubHome/")
 </script>
-
 
 {% endblock %}
