--- a/templates/yourheat/pages/quote_emailed.html
+++ b/templates/yourheat/pages/quote_emailed.html
@@ -10,7 +10,7 @@
 </div>
 
 <script>
-    all_good("Email processing", "Your quote has been sent to the customer's email address.", "quoteready_yh/")
+    all_good("Email processing", "Your quote has been sent to the customer's email address.", "HubHome/")
 </script>
 
 
