--- a/templates/yourheat/pages/home.html
+++ b/templates/yourheat/pages/home.html
@@ -50,9 +50,9 @@
     
       <div class=" col-sm-12 col-md-6">
             <div class="card card-6-complete">
-              <h3 class="card-headings">Complete A Quote</h3>
-              <p class="card-text">You are now ready to complete a quote, follow the easy to use form to create a bespoke quotation, delivered to your customer's email. Get ready to win more business!</p>
-                  <a class="stretched-link" href="/boilerform_yh"></a>
+              <h3 class="card-headings">Optional Extras</h3>
+              <p class="card-text">On this page, you can create, edit and delete the optional extras that are stored on the database and which you would like to make available to the customer.</p>
+                  <a class="stretched-link" href="/optionalextralist"></a>
             </div>
       </div>
     
