--- a/templates/yourheat/pages/list_quote_archive.html
+++ b/templates/yourheat/pages/list_quote_archive.html
@@ -18,7 +18,7 @@
 {% endfor %}
 
 <br>
-<a class="btn btn-secondary" href="/HubHome/">Return to Main Menu</a>
+<a class="btn btn-secondary" href="/home/">Return to Main Menu</a>
 
 </div>
 
