--- a/templates/pdf/user_yourheatx/customer_comms/Recommend A Friend.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Recommend A Friend.html
@@ -33,7 +33,7 @@
 </p>
 
 <p class="all_text">
-    If you do have to do is click on this link <a href="https://www.yourheat.co.uk">www.yourheat.co.uk</a> and provide their contact details and we will manage the rest.
+    If you do know someone who would be interested, all you have to do is click on this link <a href="https://www.yourheat.co.uk">www.yourheat.co.uk</a> and provide their contact details and we will manage the rest.
     If your suggestion goes ahead with us, we will send you the £50 voucher in the post.
 </p>
 
