--- a/templates/yourheat/orderforms/QuoteAcceptedForm.html
+++ b/templates/yourheat/orderforms/QuoteAcceptedForm.html
@@ -112,7 +112,7 @@
             </div>
             <div class = "col-6">
                 <div class="form-group">
-                    <label>{{form.optional_extras.label}}</label>
+                    <label>Optional Extras Chosen: (Delete those not required)</label>
                     {{ form.optional_extras }}
                    
                 </div>
