--- a/templates/yourheat/pages/base.html
+++ b/templates/yourheat/pages/base.html
@@ -11,7 +11,7 @@
   <meta http-equiv="Content-Language" content="en">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/spacelab/bootstrap.min.css">
   <link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css"> 
-  <link href="{% static 'css/hub.css' %}" rel="stylesheet" type="text/css">
+  <!-- <link href="{% static 'css/hub.css' %}" rel="stylesheet" type="text/css"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
     integrity="sha256-zmfNZmXoNWBMemUOo1XUGFfc0ihGGLYdgtJS3KCr/l0=" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
@@ -97,9 +97,9 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-        © 2019 Copyright
+        © 2020 Copyright
         <a class="grey-text text-lighten-4 right" href="https://github.com/Rorywork" target="_blank">Designed by
-          Rorywork</a>
+          KHC</a>
       </div>
     </div>
 
