--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
 
@@ -46,7 +47,7 @@
 
     <div class="row">
         <div class="col-sm-12 col-md-6 process-list-col">
-            <img class="img-fluid" src="https://www.ncbar.org/media/933988/864pop_web.jpg" alt="Paperless">
+            <img class="img-fluid" src="{% static 'images/PastNow.png' %}" alt="Paperless">
         </div>
 
         <div class="col-sm-12 col-md-6 process-image-col bg-primary">
