--- a/templates/pdf/user_yourheatx/customer_comms/Survey Booked Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Survey Booked Comms.html
@@ -2,28 +2,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <style>
-    body {background-color:rgb(240, 240, 240);}
-    .box {position:relative; width:80%; height:80%; background-color:white; margin:0 auto; border:1px solid rgb(225, 225, 225); top:20px}
-    .boxx2 {position:relative; width:80%; height:28%; background-color:rgb(240, 240, 240); border:1px solid rgb(225, 225, 225); margin:0 auto; top:40px; padding:5px;}
-    .box2 {position:relative; width:80%; height:28%; background-color:white; border:3px solid orange; border-top-left-radius: 20px; border-bottom-right-radius: 20px; margin:0 auto; top:40px; padding:5px;}
-    .all_text {font-family:verdana; font-size:14px; text-align: justify}
-    .body_text {position: relative; width:80%; margin:0 auto;}
+    @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+    * {font-family: 'Poppins', sans-serif;}
+    body { text-align: center;}
+    .all_text {font-family: 'Poppins', sans-serif; font-size:16px; text-align: justify}
+    .contact_text {font-family: 'Poppins', sans-serif; font-size:20px; text-align: center}
+    .contact_text a {font-family: 'Poppins', sans-serif; font-size:20px; text-align: center}
+    .body_text {position: relative; width:99%; margin:0 auto;}
     #final-strap-line {text-align: center; color: rgb(251,126,51);}
-    #final-strap-text {font-family:verdana; font-style: italic; font-size: 18px; font-weight: 900;}
+    #final-strap-text {font-family:verdana; font-style: italic; font-size: 16px; font-weight: 900;}
+    #img2 { position:relative; top: 20px;}
+
+    .background_img {
+        width: 99%;
+        background-image: radial-gradient( circle, rgba(216,177,56,0.25) 30%, rgba(179,94,63,1)), url("http://www.qpcentral.co.uk/static/images/yh_email_background.jpg");
+        background-position: center;
+        background-size: contain;
+        margin: 0 auto;
+        padding-bottom: 1px;
+    }
+    .text_header {font-family: 'Poppins', sans-serif; font-size:20px; color: white; text-align: center; }
+    i {
+        color:black;
+    }
+    .background_footer {
+        width:100%;
+        height:80px;
+        background-position: center;
+        background-color: black;
+        margin: 25px auto 0px auto
+    }
+    .footer_text {
+        color:white;
+        font-size: 12px;
+        text-align: right;
+    }
+    .left {
+        float: left;
+        margin: 1.5rem 2rem 2rem 2rem;
+
+    }
+    .right {
+        margin: .4rem 2rem 2rem 2rem;
+        float: right;
+    }
+    a {
+        text-decoration: none ;
+        color: inherit;
+    }
     </style>
 
-    <title>Customer Comms</title>
+<title>Customer Comms</title>
 </head>
 <body>
-<div class='box'>
-    <div class='box2'>
-        <p style='text-align:center'><img src='http://www.qpcentral.co.uk/static/images/YourHeatLogo-Transparent.png'></p>
-        <p style='text-align:center; font-family:verdana; font-size:18px'><b>About your boiler quote</b></p>
+    <div class="background_img">
+        <img src='http://www.qpcentral.co.uk/static/images/yh_logo_white_text.png' width="400" id="img2" />
+        
+        <p class="text_header">ABOUT YOUR BOILER QUOTATION</p>    
     </div>
-<br><br>
+
 <div class="body_text">    
+
+    <div class="content">
+    <div class = "contact_text">
+        <img src='http://www.qpcentral.co.uk/static/images/phone-solid.png' width="15" /> <a href="tel:01732 622990">01732 622990</a> | <img src='http://www.qpcentral.co.uk/static/images/globe-solid.png' width="15" /> <a href='https://yourheat.co.uk/book-a-job/'>www.yourheat.co.uk</a> | <img src='http://www.qpcentral.co.uk/static/images/envelope-solid.png' width="15" /> <a href='mailto:info@yourheat.co.uk'>info@yourheat.co.uk</a> 
+    </div>
+
 <p class="all_text">Dear {{ customer_title }} {{ customer_last_name }},</p>
 
 <p class="all_text">
@@ -38,27 +84,36 @@
     {% else %}
         between {{survey_time}}.
     {% endif %}    
-
 </p>
 
 <p class="all_text">
     If you do have any questions prior to our visit, please don't hesitate to reply to this email, 
-    or call on 01732 622 990.
+    or call on <a href="tel:01732 622990">01732 622990</a>.
 </p>
 
 <p class="all_text">
-    Warm Regards, The Your Heat Team
+    Warm regards, The Your Heat Team
 </p>
 
 <div id="final-strap-line">
-    <p id="final-strap-text">Your Heat - Our Priority, Always.</p>
-</div>
-
-<p class="all_text">
-    Telephone: 01732 622 990 Email: <a href='mailto:service@yourheat.co.uk'>service@yourheat.co.uk</a> Website: <a href='https://yourheat.co.uk/'>https://yourheat.co.uk/</a>
-</p>
+    <p id="final-strap-text">"Our friendly team will provide you with an efficient service, delivered with a sense of warmth. Your Heat, is our Priority, ALWAYS."</p>
 </div>
 
 </div>
+
+</div>
+
+<div class="background_footer">
+
+    <div class="left">
+        <img src='http://www.qpcentral.co.uk/static/images/yh_logo_white_text.png' width=150px>
+    </div>
+
+    <div class="right">
+        <p class = "footer_text">Copyright © 2020 Your Heat Ltd | VAT No. 213 6884 04</p>
+        <p class = "footer_text"><a href=' https://yourheat.co.uk/terms-and-conditions/'>Installation Terms and Conditions</a></p>
+    </div>
+</div>
+
 </body>
 </html>
