--- a/templates/yourheat/adminpages/confirm_calendar_appointment.html
+++ b/templates/yourheat/adminpages/confirm_calendar_appointment.html
@@ -9,11 +9,11 @@
     <!-- <h4><b>You should now close this window/tab</b></h4> -->
 
     {% if comms_name == 'Survey Booked Comms' %}
-        <a class="btn boilerbtn btn-warning" href="{% url 'ListCustomersForComms' comms_name customer_id  %}">Email Survey Booked Comms to Customer</a>
+        <a class="btn boilerbtn btn-warning" href="{% url 'PreviewComms' comms_name customer_id  %}">Email Survey Booked Comms to Customer</a>
     {% endif %}
     
     {% if comms_name == 'Installation Notification Comms' %}
-        <a class="btn boilerbtn btn-warning" href="{% url 'ListCustomersForComms' comms_name customer_id  %}">Email Installation Notification Comms to Customer</a>
+        <a class="btn boilerbtn btn-warning" href="{% url 'PreviewComms' comms_name customer_id  %}">Email Installation Notification Comms to Customer</a>
     {% endif %}
     
 
