--- a/templates/yourheat/adminpages/customer_comms_landing_page.html
+++ b/templates/yourheat/adminpages/customer_comms_landing_page.html
@@ -32,7 +32,7 @@
     </div>
     <div class="row comms-row">
         <div class = "col-4">
-            <a class="btn boilerbtn btn-warning" href="{% url 'ListCustomersForComms' 'Survey Booked Comms' customer_id  %}">Resend Survey Booked Comms</a>
+            <a class="btn boilerbtn btn-warning" href="{% url 'PreviewComms' 'Survey Booked Comms' customer_id  %}">Resend Survey Booked Comms</a>
         </div>
         <div class = "col-8">    
             <i>Dear ____, Our surveyor is looking forward to visiting you to provide a free, no-obligation quote...</i><br>
@@ -41,7 +41,7 @@
     </div>   
     <div class="row comms-row">
         <div class = "col-4">
-            <a class="btn boilerbtn btn-warning" href="{% url 'ListCustomersForComms' 'Boiler Quotation Comms' customer_id  %}">Boiler Quotation Follow-up Comms</a>
+            <a class="btn boilerbtn btn-warning" href="{% url 'PreviewComms' 'Boiler Quotation Comms' customer_id  %}">Boiler Quotation Follow-up Comms</a>
         </div>
         <div class = "col-8">    
             <i>Dear ____, We've been trying to contact you to discuss the quotation we gave you recently...</i>
@@ -50,7 +50,7 @@
     </div>        
     <div class="row comms-row">
         <div class = "col-4">      
-            <a class="btn boilerbtn btn-warning" href="{% url 'ListCustomersForComms' 'Our Priority Comms' customer_id  %}">Our Priority Comms</a>
+            <a class="btn boilerbtn btn-warning" href="{% url 'PreviewComms' 'Our Priority Comms' customer_id  %}">Our Priority Comms</a>
         </div>
         <div class = "col-8">  
             <i>Dear ____, We tried calling today to discuss the quotation we gave on...</i>
@@ -59,7 +59,7 @@
     </div>
     <div class="row comms-row">
         <div class = "col-4">              
-            <a class="btn boilerbtn btn-warning" href="{% url 'ListCustomersForComms' 'Installation Notification Comms' customer_id  %}">Resend Installation Notification Comms</a>
+            <a class="btn boilerbtn btn-warning" href="{% url 'PreviewComms' 'Installation Notification Comms' customer_id  %}">Resend Installation Notification Comms</a>
         </div>
         <div class = "col-8">
             <i>Dear ____, Thank you for choosing Your Heat as your trusted boiler installation specialist...</i>
@@ -68,13 +68,23 @@
     </div>
     <div class="row comms-row">
         <div class = "col-4">                      
-            <a class="btn boilerbtn btn-warning" href="{% url 'ListCustomersForComms' 'Free Boiler Service Comms' customer_id  %}">Free Boiler Service Comms</a>
+            <a class="btn boilerbtn btn-warning" href="{% url 'PreviewComms' 'Free Boiler Service Comms' customer_id  %}">Free Boiler Service Comms</a>
         </div>
         <div class = "col-8">    
             <i>Dear ____, Thank you for choosing Your Heat to look after the installation of your new boiler...</i>
             <p class="critical_ss_fields">&nbsp;&nbsp;[Customer Title] [Customer Last Name] [Customer ID]</p>
         </div>
-    </div>        
+    </div>
+    <div class="row comms-row">
+        <div class = "col-4">
+            <a class="btn boilerbtn btn-warning" href="{% url 'PreviewComms' 'New Survey Booked Comms' customer_id  %}">For Testing Only (SurveyBooked)</a>
+        </div>
+        <div class = "col-8">    
+            <i>Dear ____, Our surveyor is looking forward to visiting you to provide a free, no-obligation quote...</i><br>
+            <p class="critical_ss_fields">&nbsp;&nbsp;[Customer Title] [Customer Last Name] [ Surveyor Name ] [ Survey Date ] [ Survey Time ]</p>
+        </div>
+    </div>         
+      
     <div class="row comms-row">
         <div class = "col-4">            
             <a class="btn btn-secondary" href="/ProcessingCancelled/">Cancel</a>
