--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,10 @@
   </script>
 
   {% if user.is_authenticated %}
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-custom-2">
     <a class="navbar-brand" href="/home">
-      <div class="img-logo-admin">
-        <img src="{% static 'images/YourHeatLogo-Transparent.png' %}" width="180px" alt="">
+      <div>
+        <img src="{% static 'images/yh_logo_white_text.png' %}" width="180px" alt="">
       </div>
     </a>
     {% if request.user.username == 'yourheatx' %}
@@ -186,7 +186,7 @@
     </main>
   </div>
 
-  <footer class="bg-primary base-footer">
+  <footer class="base-footer-image base-footer">
     <div class="container">
       <div class="row">
         <div class=" col-12 col-lg-6">
@@ -196,9 +196,7 @@
         <div class="col-12 col-lg-4 offset-lg-2">
           <h5>Follow Us</h5>
           <ul>
-            <li class="social-list"><a href="https://www.instagram.com" target="_blank"><i
-                  class="fab fa-instagram"></i></a></li>
-            <li class="social-list"><a href="https://www.facebook.com" target="_blank"><i
+            <li class="social-list"><a href="https://m.facebook.com/YourHeatLtd/" target="_blank"><i
                   class="fab fa-facebook-f"></i></a></li>
           </ul>
         </div>
@@ -206,9 +204,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-        © 2020 Copyright
-        <a class="grey-text text-lighten-4 right" href="https://github.com/Rorywork" target="_blank">Designed by
-          KHC</a>
+        © 2020 Copyright Designed by KHC
       </div>
     </div>
 
